--- a/templates/index.html
+++ b/templates/index.html
@@ -318,7 +318,7 @@
         <p>Daily discounts and exclusive offers.</p>
       </div>
       <div class="why-us-card">
-        <img src="assets/support.jpeg" alt="Support">
+        <img src="assets/support.jpg" alt="Support">
         <h3>24/7 Support</h3>
         <p>We’re here to help you anytime.</p>
       </div>
@@ -456,3 +456,4 @@
  <script src="static/fragrance-fetch.js"></script>
 </body>
 </html>
+
